--- a/.github/workflows/build -image.yaml
+++ b/.github/workflows/build -image.yaml
@@ -31,6 +31,10 @@ jobs:
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
             type=sha
+          labels: |
+            io.artifacthub.package.readme-url=https://github.com/AlertoJon-io/alertojon.io-pagerduty-operator/blob/develop/README.md
+            org.opencontainers.image.created={{created_at}}
+            org.opencontainers.image.description=alertojon base operator
 
       - name: Login to digital ocean
         uses: docker/login-action@v1
