updated readme docker tag

--- a/.github/workflows/build -image.yaml
+++ b/.github/workflows/build -image.yaml
@@ -31,9 +31,10 @@ jobs:
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
             type=sha
-            type=raw,value=io.artifacthub.package.readme-url=https://github.com/AlertoJon-io/alertojon.io-pagerduty-operator/blob/develop/README.md
-            type=raw,value=org.opencontainers.image.created={{created_at}}
-            type=raw,value=org.opencontainers.image.description=alertojon base operator
+          labels: |
+            io.artifacthub.package.readme-url=https://raw.githubusercontent.com/AlertoJon-io/alertojon.io-pagerduty-operator/develop/README.md?token=GHSAT0AAAAAABQQ6WUOESBNMGAQQJ3IGKIGYPR4FUQ
+            org.opencontainers.image.created=${{ steps.prep.outputs.created }}
+            org.opencontainers.image.description=alertojon base operator
 
       - name: Login to digital ocean
         uses: docker/login-action@v1
