--- a/.github/workflows/build -image.yaml
+++ b/.github/workflows/build -image.yaml
@@ -13,6 +13,29 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
+      -
+        name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v3
+        with:
+          # list of Docker images to use as base name for tags
+          images: |
+            alertojon/operator
+          # generate Docker tags based on the following events/attributes
+          tags: |
+            type=ref,event=branch
+          labels: |
+            io.artifacthub.package.license=MIT
+            org.opencontainers.image.vendor=AlertoJon.io
+            io.artifacthub.package.alternative-locations=alertojon/pagerduty-provider:develop
+            io.artifacthub.package.keywords=incident management,alertojon.io,operator,alerts,incident management,incident
+            org.opencontainers.image.description=AlertoJon.io pagerduty provider operator
+            org.opencontainers.image.source=https://github.com/AlertoJon-io/alertojon.io-pagerduty-operator
+            io.artifacthub.package.logo-url=https://drive.google.com/uc?id=1uKH_ca6fu76aGNqO7rPEAZ8hP8EYnO0p
+            org.opencontainers.image.documentation=https://github.com/AlertoJon-io/alertojon.io-pagerduty-operator/wiki
+            io.artifacthub.package.maintainers=[{"name":"AlertoJon.io maintainers","email":"pickjonathan@alertojon.io"}] 
+            io.artifacthub.package.readme-url=https://raw.githubusercontent.com/AlertoJon-io/alertojon.io-pagerduty-operator/main/README.md
+
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
@@ -24,5 +47,6 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          push: true
-          tags: registry.digitalocean.com/alertojon-io/pagetduty-operator:latest
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
